# search_engine

./: CMakeLists.txt  ReadMe.md  answers.json  config.json  main.cpp  requests.json
MakeConfigFiles/: CMakeLists.txt  MakeConfigFile.cpp  MakeRequestsFile.cpp  main_config.cpp
include/: ConverterJSON.h  Entry.h  InvertedIndex.h  MakeConfigFile.h  MakeRequestsFile.h  RelativeIndex.h  SearchServer.h
resources/: file002.txt  file003.txt  file005.txt  file006.txt  file007.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  RelativeIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  ConverterJSONTest.cpp  InvertedIndexTest.cpp  SearchServerTest.cpp
